Add user count endpoint
